--- a/programs/bpf/Cargo.toml
+++ b/programs/bpf/Cargo.toml
@@ -68,6 +68,7 @@ members = [
     "rust/param_passing",
     "rust/param_passing_dep",
     "rust/rand",
+    "rust/revertable",
     "rust/ro_modify",
     "rust/sanity",
     "rust/sha",
