--- a/programs/bpf/Cargo.toml
+++ b/programs/bpf/Cargo.toml
@@ -68,7 +68,7 @@ members = [
     "rust/param_passing",
     "rust/param_passing_dep",
     "rust/rand",
-    "rust/revertable",
+    "rust/revertable/src/revertable",
     "rust/ro_modify",
     "rust/sanity",
     "rust/sha",
