--- a/evm-utils/evm-block-recovery/Cargo.toml
+++ b/evm-utils/evm-block-recovery/Cargo.toml
@@ -9,13 +9,15 @@ readme = "README.MD"
 
 [dependencies]
 anyhow = "1"
+async-stream = "0.3.3"
 bincode = "1.3.3"
 chrono = { version = "0.4.19", features = ["serde"] }
-clap = { version = "3.2.8", features = ["derive"] }
+clap = { version = "3.2.15", features = ["derive"] }
 dotenv = "0.15.0"
 env_logger = "0.9.0"
 evm-rpc = { path = "../evm-rpc" }
 evm-state = { path = "../evm-state" }
+futures = "0.3.21"
 log = "0.4.17"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
