--- a/replica-lib/Cargo.toml
+++ b/replica-lib/Cargo.toml
@@ -39,9 +39,9 @@ derivative="2.2"
 evm-state = { path = "../evm-utils/evm-state" }
 evm-rpc = { path = "../evm-utils/evm-rpc" }
 primitive-types = "0.8.0"
-rocksdb = { package = "rocksdb", version = "0.20.1", default-features = false }
+rocksdb = { package = "rocksdb", version = "0.21", default-features = false }
 
-triedb = { git = "https://github.com/velas/triedb", tag = "rocksdb-v0.20.1-orth", features = ["rocksdb"] }
+triedb = { git = "https://github.com/velas/triedb", branch = "bump-rocksdb-v0.21", features = ["rocksdb"] }
 
 rangemap = { version = "1.3.0", features = ["serde1"]}
 
