--- a/evm-utils/evm-rpc/Cargo.toml
+++ b/evm-utils/evm-rpc/Cargo.toml
@@ -19,7 +19,7 @@ evm-state = { path = "../evm-state" }
 hex = "0.4.2"
 rustc-hex = "2.1"
 rlp = "0.5.0"
-secp256k1 = { version = "0.19.0", features = ["recovery", "global-context"] }
+# secp256k1 = { version = "0.19.0", features = ["recovery", "global-context"] }
 snafu = "0.7"
 uint = "0.9"
 anyhow = "1.0"
