--- a/evm-utils/evm-block-recovery/Cargo.toml
+++ b/evm-utils/evm-block-recovery/Cargo.toml
@@ -4,12 +4,13 @@ name = "evm-block-recovery"
 version = "0.1.0"
 edition = "2021"
 readme = "README.MD"
+build = "build.rs"
 
 [dependencies]
 bincode = "1.3.3"
 chrono = { version = "0.4.19", features = ["serde"] }
-clap = { version = "4.3.21", features = ["derive"] }
-clap_complete = "=4.0.7"
+clap = { version = "4.3.21", features = ["derive", "string"] }
+clap_complete = "4.0.7"
 dotenvy = "0.15.3"
 env_logger = "0.10.0"
 evm-rpc = { path = "../evm-rpc" }
@@ -27,3 +28,6 @@ thiserror = "1"
 
 backon = "0.4.0"
 rangemap = { version = "1.3.0", features = ["serde1"]}
+
+[build-dependencies]
+built = { version = "0.6", features = ["git2"] }
